--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "exactextractr"]
+	path = exactextractr
+	url = https://github.com/isciences/exactextractr
+	shallow = true
+	registered = true
